Add itinerary panel with day-by-day travel plan and route distance

--- a/index.html
+++ b/index.html
@@ -175,6 +175,17 @@
         <button class="btn btn-gradient btn-block" id="explore-btn">
           <span>✨</span> Explore Places
         </button>
+
+        <!-- Itinerary Panel -->
+        <div class="glass-card itinerary-panel" id="itinerary-panel" style="display: none;">
+          <div class="glass-card-header">
+            <div class="icon">📋</div>
+            <h3>Your Itinerary</h3>
+          </div>
+          <div id="itinerary-content" class="itinerary-content">
+            <!-- Itinerary will be generated here -->
+          </div>
+        </div>
       </div>
     </aside>
 
